worked on riku and manana, still working on ambushed. Haven't edit riku and manana.

--- a/src/10_k.md
+++ b/src/10_k.md
@@ -38,7 +38,7 @@ The nurse-hat guy only reacted after he did the welcoming pose. He quickly face 
 
 The woman, irises mostly turquoise with some magenta, long thick forward-pointing brown eyelashes, wore metal plates at her shoulder, "My own indiscretion... has caused you difficulties. I'm sorry." 
 
-The guy standing behind her had brown skin, wore a power suit, thick hair that curved at its edge, and no other features the writer could describe other than strips of orange on his power suit. 
+The guy standing behind her had brown skin, wore a power suit, thick hair that curved at its edge, and no other features the translator could describe other than strips of orange on his power suit. 
 
 The nurse-hat guy anxiously blurted out, "N-no! We would never... Our apologies, Commander Ethel!" 
 
